--- a/public/assets/sass/pages/_shop.scss
+++ b/public/assets/sass/pages/_shop.scss
@@ -1258,7 +1258,7 @@
 	&-white{background:#ffffff;}
 	&-orange{background:#ffbb51;}
 	&-cyan{background:#80e6ff;}
-	&-green{background:#38cf46;}
+	&-green{background:#FFA500;}
 	&-purple{background:#ff8ff8;}
 }
 .detail-gallery .product-image-slider {
