--- a/public/assets/sass/abstracts/_variables.scss
+++ b/public/assets/sass/abstracts/_variables.scss
@@ -13,14 +13,14 @@ $font-xl: 19px;
 $font-xxl: 58px;
 
 //2.COLOR
-$color-brand: #3BB77E;
-$color-brand-dark: #29A56C;
+$color-brand: #FF8C00;
+$color-brand-dark: #FF4500;
 $color-brand-2: #FDC040;
 $color-primary: #5a97fa;
 $color-secondary: #3e5379;
 $color-warning: #ff9900;
 $color-danger: #FD6E6E;
-$color-success: #81B13D;
+$color-success: #FFA500;
 $color-info: #2cc1d8;
 $color-text: #7E7E7E;
 $color-heading: #253D4E;
@@ -61,7 +61,7 @@ $box-shadown-3-hover: 20px 20px 54px rgba(0, 0, 0, 0.05);
 
 //4. Border
 $border-color: #ececec;
-$border-color-2: #BCE3C9;
+$border-color-2: #FF8C00;
 
 //5. Background
 $background-1: #F2F3F4;
